# ChangeLog for media-libs/imlib2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.94 2010/03/08 10:01:26 ssuominen Exp $

  08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  imlib2-1.4.2-r1.ebuild, +files/imlib2-1.4.2-libpng14.patch:
  Fix implicit declaration of function png_check_sig with libpng14.

  22 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  imlib2-1.4.2-r1.ebuild:
  Require SLOT="0" of media-libs/jpeg for headers.

  03 Jul 2009; Mike Frysinger <vapier@gentoo.org> imlib2-1.4.2-r1.ebuild:
  Make sure bumpmap is linked with -lm #276285 by Christian Ruppert.

  29 May 2009; Mike Frysinger <vapier@gentoo.org>
  -files/imlib2-1.4.0-CVE-2008-2426.patch, -imlib2-1.4.1.ebuild,
  -files/imlib2-1.4.1-rgb.patch, -imlib2-1.4.2.ebuild:
  Punt due to being vuln to GLSA 200812-23 #271767.

  07 Dec 2008; Tobias Heinlein <keytoaster@gentoo.org>
  imlib2-1.4.2-r1.ebuild:
  amd64 stable wrt security bug #248057

  01 Dec 2008; Brent Baude <ranger@gentoo.org> imlib2-1.4.2-r1.ebuild:
  Marking imlib2-1.4.2-r1 ppc64 for bug 248057

  01 Dec 2008; Raúl Porcel <armin76@gentoo.org> imlib2-1.4.2-r1.ebuild:
  alpha/arm/ia64/sparc/sh/x86 stable wrt #244808

  01 Dec 2008; Jeroen Roovers <jer@gentoo.org> imlib2-1.4.2-r1.ebuild:
  Stable for HPPA (bug #248057).

  30 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  imlib2-1.4.2-r1.ebuild:
  ppc stable, bug #248057

*imlib2-1.4.2-r1 (27 Nov 2008)

  27 Nov 2008; Mike Frysinger <vapier@gentoo.org>
  +files/imlib2-1.4.2-CVE-2008-5187.patch, +imlib2-1.4.2-r1.ebuild:
  Fix from upstream for CVE-2008-5187 #248057.

  30 Oct 2008; Tobias Scherbaum <dertobi123@gentoo.org> imlib2-1.4.2.ebuild:
  ppc stable, bug #243850

  28 Oct 2008; Raúl Porcel <armin76@gentoo.org> imlib2-1.4.2.ebuild:
  alpha/arm/ia64/sh/sparc stable #243850

  27 Oct 2008; Brent Baude <ranger@gentoo.org> imlib2-1.4.2.ebuild:
  Marking imlib2-1.4.2 ppc64 for bug 243850
