@@ -2,6 +2,8 @@ AUX imlib2-1.4.2-CVE-2008-5187.patch 678 RMD160 fd7b0078640a3bc7a297d6b32f3063ed
 AUX imlib2-1.4.2-darwin-bundle.patch 422 RMD160 ab5a275aa7c5a0598641143fbb3a841ad52ffefb SHA1 1c0ebd7ef0c54784bf169835fd6a4c2361f6d094 SHA256 8bd72fe3ec8bf0ec3cfce3f13f90d538f3ea54b7454dab40e028c7021dc11607
 AUX imlib2-1.4.2-libpng14.patch 454 RMD160 410ae852f25c3bcc374195e542b3397840531199 SHA1 549f5a26fc5fb5c85b164c5d5fdcd92219c40f10 SHA256 694606bfb3678600aac675ecd392af1d45508eef328f3490def7cda1c5b093ba
 DIST imlib2-1.4.2.tar.gz 932684 RMD160 9b1f40ee392c1e27c6a75bbf7e8c7fb379e74695 SHA1 769ea1da26774cd7531d1d66432cf8d7d7b30c2b SHA256 9099c7c33e4150ba6b43d12d1fbe2b7479cfe30285af49a531337c18c088110a
+DIST imlib2-1.4.4.tar.gz 977630 RMD160 5428899e202a56e91a0421d6c44dd41b0d3011f7 SHA1 3e1fc356a78fbc902a6199241b75cd9830b7fa5f SHA256 a4de52c90b8cd155b41ca70c2d34209f7b94a9e4f8e77582f2682a1795306198
 EBUILD imlib2-1.4.2-r01.1.ebuild 1632 RMD160 3b4a14af46d6ccdc4f0869325ec5982afe51210d SHA1 01e1381045c1cfd28196369904059ce1813e6bd1 SHA256 7f12bcc8b606023aa91c6a9a32b39728ab1f718dfca56464d81b1fa81c112763
-MISC ChangeLog 11291 RMD160 00e4e95b5e745b5d7ab82e38fd61fdf63fb1891d SHA1 a4d26ae84d8d4a8505036b0a9aceec37174eeac7 SHA256 f4e0beca91369ffd61029b5d2ab8ba3fafb1785c3f428a2f4c21d3b8096cdbc3
+EBUILD imlib2-1.4.4.ebuild 1443 RMD160 7eb452862103ac83020f7b3ca51fc04afa99c683 SHA1 e69ab66d1325c9b909d1fa42900386755cc126e6 SHA256 196a8b474d43f07484576c02e7e046fa708fc7ebd7c84fc3f3101b1440f86c71
+MISC ChangeLog 11559 RMD160 7b2ef5d158bb151a264345e8078ff8392c934abc SHA1 636a5d29be77da4965160df96413e4b5a8862453 SHA256 016c429d3590eafccf9eb031f4a50d02a359b6a6c4c7f604862d35d8cd1ebcd7
 MISC metadata.xml 2255 RMD160 da6c5bba4102a0a0bf263ed8f986704d74292a8f SHA1 5e968e9ca6c3640ee5e3c98c6939099014edbb27 SHA256 81f9771e8e64255ed50d174fe917f9ed0507db9afe88df9f29ce311a6075b30f
