@@ -1,6 +1,16 @@
 # ChangeLog for media-libs/imlib2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.94 2010/03/08 10:01:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/imlib2/ChangeLog,v 1.96 2010/05/08 00:10:58 vapier Exp $
+
+*imlib2-1.4.4 (08 May 2010)
+
+  08 May 2010; Mike Frysinger <vapier@gentoo.org> +imlib2-1.4.4.ebuild:
+  Version bump #318761 by Samuli Suominen.
+
+*imlib2-1.4.3 (13 Apr 2010)
+
+  13 Apr 2010; Mike Frysinger <vapier@gentoo.org> +imlib2-1.4.3.ebuild:
+  Version bump #314759.
 
   08 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
   imlib2-1.4.2-r1.ebuild, +files/imlib2-1.4.2-libpng14.patch:
